  * Compilation fixes for the case that LIBOSSO_DEBUG is defined.
  * Const keyword fixes from Murray Cumming <murrayc@murrayc.com>.
    Fixes: MB#795
  * Enabled the muali filter and fixed a crash in it.
  * Did fixes to configure.ac and Makefile.ams.
  * The unit tests are not built if outo is not present -> outo is now
    optional. Fixes: MB#824

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 08 Nov 2006 16:41:22 +0200

libosso (1.20-1) unstable; urgency=low

  * Compilation fixes from Murray Cumming <murrayc@murrayc.com>.
    Fixes: MB#795
  * Added content to the README file because of a sudden popular demand.
  * Added more untested muali code (it's not in use yet).
  * Copyright header fixes in unit testing code. Fixes: NB#42519

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri, 06 Oct 2006 17:48:21 +0300

libosso (1.19-1) unstable; urgency=low

  * Added calling ldconfig to postinst.
  * More fixes to copyright headers. Fixes: NB#40918
  * Added more deprecation warnings to osso_application_set_exit_cb().
  * Fixed the state reading function once again. Fixes: NB#41325
  * Now checking whether the MIME handler really existed when unsetting
    it. Fixes: NB#41082
  * Fixed the debug package to be new-style. Fixes: NB#41394
  * Fixed possible memory leak in osso-state.c when reading the state fails.
  * Fixes to debian/copyright and debian/control.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 28 Sep 2006 12:33:29 +0300

libosso (1.18-1) unstable; urgency=low

  * Added postinst script for calling ldconfig.
  * Fixed problems in supporting non-com.nokia-prefixed services.
    Fixes: NB#31831, NB#32067
  * Added more warning flags to compilation and fixed warnings.
  * Added optimisation to service registration so that registering the
    default service name is not tried more than once.
  * Message handling was rewritten: unregistering message and signal
    handlers should now be more predictable.